# transcription

./: README.md  app.py  pyproject.toml  setup.sh
src/transcribe/: __init__.py  __main__.py  audio.py  cli.py  config.py  transcriber.py
tests/: __init__.py  test_audio.py  test_cli.py  test_transcriber.py
